Fix squish and enable flow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -815,7 +815,7 @@ app-user-billing {
 
 img.logo {
     width: 284px;
-    height: 43px;
+    height: 98px;
     margin: 0 auto;
     display: block;
 }
